Refactor class - replace totallylazy with vanilla java